# snakemake-interface-storage-plugins

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  test.yml
snakemake_interface_storage_plugins/: _common.py  common.py  exceptions.py  io.py  query.py  settings.py  storage_object.py  storage_provider.py  tests.py
snakemake_interface_storage_plugins/registry/: __init__.py  plugin.py
tests/: tests.py
