[tool.poetry]
name = "snakemake-interface-storage-plugins"
version = "3.2.4"
description = "This package provides a stable interface for interactions between Snakemake and its storage plugins."
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"
homepage = "https://github.com/snakemake/snakemake-interface-storage-plugins"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.12.0"
wrapt = "^1.15.0"
reretry = "^0.11.8"
throttler = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
coverage = {extras = ["toml"], version = "^7.3.2"}
flake8 = "^6.1.0"
flake8-bugbear = "^23.3.12"
pytest = "^7.0"
snakemake-storage-plugin-http = {git="https://github.com/snakemake/snakemake-storage-plugin-http.git"}
snakemake = "^8.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
